--- a/css/style.css
+++ b/css/style.css
@@ -59,64 +59,171 @@ body {
 
 header {
   background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
-  background-size: 100%;
+  background-size: cover;
   width: 100%;
-  height: 400px;
+  height: 100%;
   position: relative;
 }
 
 header h1 {
   font-size: 40px;
   font-weight: 900;
-  position: absolute;
-  margin-left: 15%;
-  margin-top: 6%;
+  margin-left: 7%;
   color: #fff;
+  padding-top: 3%
 }
 
 header h2 {
-  font-size: 40px;
+  font-size: 33px;
   font-weight: 500;
-  position: absolute;
   margin: 0 auto;
   text-align: center;
   color: #fff;
-
+  margin-top: 9%;
 }
 
 header button {
-  position: absolute;
+  display: block;
+  background: yellow;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 7px;
+  font-size: 20px;
+  padding: 8px 47px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 4%;
+  color: #043049;
 }
 
 main {
-  background: #f2f2f2;
+  background: #efefee;
   width: 100%;
-  height: 400px;
+  height: auto;
+  padding-bottom: 7%;
 }
 
 blockquote {
   background: url("../images/testimonial_bg.jpg");
   width:100%;
-  height: 400px;
+  height: auto;
   background-size: cover;
   color: #fff;
 }
 
 #signup {
-  background: yellow;
+  background: #f9e42e;
   width:100%;
-  height: 100px;
+  height: auto;
   color: #fff;
 }
 
 footer {
   width: 100%;
-  height: 300px;
-  background: #444;
+  height: auto;
+  background: #121211;
   color: #fff;
 }
 
+h3 {
+    font-family: 'Open Sans', sans-serif;
+    margin-left: 7%;
+    padding-top: 4%;
+    margin-bottom: 4%;
+    font-size: 34px;
+    font-weight: 900;
+  }
 
+main p {
+    color: gray;
+    margin-left: 7%;
+    margin-bottom: 2%;
+    font-size: 20px;
+    font-weight: lighter;
+    width: 43%;
+}
+
+main ul {
+    margin-left: 15%;
+    margin-bottom: 2%;
+    color: gray;
+    font-size: 20px;
+    font-weight: lighter;
+    width: 35%;
+}
+
+#testimonial {
+    text-align: center;
+    padding-top: 39px;
+    padding-bottom: 39px;
+    width: 36%;
+    margin: 0 auto;
+}
+
+blockquote p {
+    font-size: 20px;
+    font-style: italic;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
+    color: #9A9A9A;
+}
+
+#signup button {
+    display: block;
+    margin: 0 auto;
+    background: #043049;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 7px;
+    font-size: 20px;
+    padding: 8px 47px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #fff;
+}
+
+#sign-up-button {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+footer p {
+  display: block;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  padding-bottom: 20px;
+}
+
+footer h1 {
+    text-align: center;
+    padding-top: 40px;
+    font-size: 40px;
+    font-weight: 900;
+    color: yellow;
+    padding-top: #f9e42e;
+}
+
+#social-links {
+    display: block;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#facebook {
+  padding-right: 7px;
+}
+
+#twitter {
+  padding-left: 7px;
+}
+
+span#author {
+    font-style: normal;
+    font-weight: 400;
+    color: #fff;
+}
 
 
 
